# Department806

./: .gitignore  Lab1.sln  Lab1.vcxproj  README.md  kernel.cu
2020/: CUDA_LR1_6.cu  Ovcharuk  README.md
2020/Botolov N/: sqrtBotolov.cu
2020/Galyugin A/: GalyuginAlexeylab1.cu
2020/Karpov G/: lab1Karpov207.cu  lab2Karpov207.cu
2020/Korobetckaia A/: lab1Korobetckaia.cu  labKorobetckaia.cu
2020/Larin A/: Lab1Var4.cu  Lab2Var11.cu
2020/Mironov S.V Cuda/: Cuda_2lab_число сочетаний.cu
2020/Nikitina A/: laba1_nikitina.cu
2020/Ovcharuk E/: kernel.cu
2020/Pavlov M/: cuda_lab2.cu
2020/Petrushin V/: sum_of_squares.cu
2020/Savchuk D/: CUDA_LR1_6.cu  CUDA_LR2_6_shared.cu
2020/Semenov S/: counter.v  full_adder.vhd  matrix_multiplication_constant.cu  matrix_multiplication_local.cu  matrix_multiplication_shared.cu  matrix_multiplication_simple.cu  matrix_multiplication_texture.cu  sin.sqrt.GPU-timer+SKD-timer.cu  sin.sqrt.GPU-timer.cu  sin.sqrt.txt
2020/Stepanov/: Stepanov_laba_1.cu
2020/Stepanov T/: Stepanov_laba_2.cu
2020/Vinnikov A/: lu_decomposition.cu  matrix_multiplication.cu
2020/VorobevAV/: LR1_VorobevAV.cu  LR2_VorobevAV.cu
2021/: README.md
2021/Vetrenko/: 1.cu
2022/: CudaRuntime12.vcxproj  Korzhenevskii E.B.  README.md  kernel.cu
2022/BiroIO/hard/: CMakeLists.txt  cpu_impl.cpp  gpu_impl.cu  main.cpp  make_graph.py  performance_test.py  performance_test_result.csv
2022/Godiav D.V/: README.md
2022/SemenovS/: seminar_1.0.c
2022/korzhenevskii E.B./: L_2_6_.vcxproj  kernel.cu
Mironov S.V Cuda/: Вычисление e^x на CPU+GPU+замеры.cu
(+268 files in other folders)
